--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
                                         <li> <a href="#home" class="dropdown-toggle selected">Home</a></li>
                                         <li> <a href="#about" class="dropdown-toggle">Sobre</a></li>
                                         <li> <a href="#portfolio" class="dropdown-toggle">Portfolio</a></li>
-                                        <li> <a href="#blog" class="dropdown-toggle">Blog</a></li>
                                         <li> <a href="#contact" class="dropdown-toggle">Contatos</a></li>
                                     </ul>
                                 </nav>
@@ -165,10 +164,14 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                     </div>
                     <div class="portfolio_filter type-1">
                         <ul>
-                            <li data-filter=".web">WEB</li>
+                            <li data-filter=".web">Web</li>
+                            <!--  MOBILE 
                             <li data-filter=".mobile">Mobile</li>
+                            -->
                             <li data-filter=".game">Game</li>
+                            <!-- ILUSTRAÇÕES
                             <li data-filter=".illustrator">Ilustraçoẽs</li>
+                            -->
                             <li class="select-cat" data-filter="*">Todos</li>
                         </ul>
                     </div>
@@ -195,48 +198,8 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                                 </figcaption>
                             </figure>
                         </a>
-                        <!-- item -->
-                        <a href="work-detail-1.html" class="col-md-6 col-sm-6 col-xs-12 single-item illustrator">
-                            <figure>
-                                <img src="images/masonry/work-3.jpg" alt="">
-                                <figcaption>
-                                    <h3>Autumn flowers</h3>
-                                    <p>PHOTOGRAPHY </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                        <!-- item -->
-                        <a href="work-detail-1.html" class="col-md-6 col-sm-6 col-xs-12 single-item mobile">
-                            <figure>
-                                <img src="images/masonry/work-4.jpg" alt="">
-                                <figcaption>
-                                    <h3>Autumn flowers</h3>
-                                    <p>PHOTOGRAPHY </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                        <!-- item -->
-                        <a href="work-detail-1.html" class="col-md-6 col-sm-6 col-xs-12 single-item mobile">
-                            <figure>
-                                <img src="images/masonry/work-5.jpg" alt="">
-                                <figcaption>
-                                    <h3>Autumn flowers</h3>
-                                    <p>PHOTOGRAPHY </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                        <!-- item -->
-                        <a href="work-detail-1.html" class="col-md-6 col-sm-6 col-xs-12 single-item">
-                            <figure>
-                                <img src="images/masonry/work-6.jpg" alt="">
-                                <figcaption>
-                                    <h3>Autumn flowers</h3>
-                                    <p>PHOTOGRAPHY </p>
-                                </figcaption>
-                            </figure>
-                        </a>
                     </div>  
-                    <!-- USAR QUANDO TIVER CM MAIS PROJETOS 
+                    <!-- USAR QUANDO TIVER C0M MAIS PROJETOS 
                       
                     <a href="#" class="more">Mais Trabalhos <br/> <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 
