--- a/index.html
+++ b/index.html
@@ -249,7 +249,10 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                         </div>
                     </div>
                 </div>
+                
             </div>
+
+            <div class="line col-md-8 col-md-offset-2 hidden-sm hidden-xs top_120"></div>
         </section>
         <!--/Skills Sec-->
         
