ajustando alguns estilos

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <title>Guilherme Farias</title>
     <meta charset="UTF-8">
-    <meta name="description" content="R. Giggs - Creative Onepage Template">
-    <meta name="keywords" content="personal, portfolio, vcard">
+    <meta name="description" content="Meu portifolio Guilherme Farias">
+    <meta name="keywords" content="personal, portfolio, vcard, CV, Guilherme, Farias, Guilherme Farias, Desenvolvedor, Freelancer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
@@ -45,7 +45,7 @@
                     <div class="navbar radius-nav">
                         <div class="row">
                             <!-- Hire Me -->
-                            <a data-toggle="tooltip" data-placement="top" title="Hire Me!" class="col-md-1 col-sm-1 col-xs-1 hidden-xs hidden-sm pull-right send-mail" href="mailto:cloud@tavillathemes.com">
+                            <a data-toggle="tooltip" data-placement="top" title="Contatar!" class="col-md-1 col-sm-1 col-xs-1 hidden-xs hidden-sm pull-right send-mail" href="mailto:gui.farias@outlook.com.br">
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                             </a>
                             <div class="col-md-5 col-sm-10 col-xs-9 navbar-left">
@@ -164,8 +164,8 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                     <div class="progress-bar-graph">
                         <div class="progress-bar-wrap">
                             <div class="bar-wrap">
-                                <span style="width:94%">
-                                <strong><i>94</i>%</strong>
+                                <span style="width:90%">
+                                <strong><i>90</i>%</strong>
                                 </span>
                             </div>
                         </div>
@@ -258,7 +258,7 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
         
         
         <!-- PORTFOLIO -->
-        <section id="portfolio" class="portfolio type-3 top_120">
+        <section id="portfolio" class="portfolio type-2 top_120">
             <div class="container">
                 <!-- filter -->
                 <div class="col-md-3">
@@ -286,7 +286,7 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                         <!-- item -->
                         <a href="https://gui-farias.github.io/levaai/index.html" class="col-md-6 col-sm-6 col-xs-12 single-item web" target="blank">
                             <figure style="height:380px; background-color: #ebebe0;">
-                                <img src="images/levaai.png" alt="logo levaai">
+                                <img src="images/levaai.png" alt="logo levaai" style="margin-top: 34%;">
                                 <figcaption>
                                     <h3>LevaAi</h3>
                                     <p>Projeto </p>
@@ -296,7 +296,7 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                         <!-- item -->
                         <a href="https://gui-farias.github.io/Pessoal/alien.html" class="col-md-6 col-sm-6 col-xs-12 single-item game" target="blank">
                             <figure style="height:450px; background-color: #ebebe0;">
-                                <img src="images/alienobalde.png" alt="">
+                                <img src="images/alienobalde.png" alt="logo alien no balde" style="margin-top: 14%;">
                                 <figcaption>
                                     <h3>Alien no balde</h3>
                                     <p>Game </p>
