--- a/index.html
+++ b/index.html
@@ -196,19 +196,6 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                         </div>
                     </div>
                 </div>
-                <div class=" col-sm-5 margin-bottom-sm">
-                    <span class="progress-cat">Node Js</span>
-                    <div class="progress-bar-graph">
-                        <div class="progress-bar-wrap">
-                            <div class="bar-wrap">
-                                <span style="width:40%">
-                                <strong><i>40</i>%</strong>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
                 
                 <div class=" col-sm-5 margin-bottom-sm">
                     <span class="progress-cat">React</span>
@@ -244,6 +231,33 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                             <div class="bar-wrap">
                                 <span style="width:50%">
                                 <strong><i>50</i>%</strong>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+                <div class="clearfix"></div>
+                <div class="col-sm-5 margin-bottom-sm">
+                    <span class="progress-cat">Kotlin</span>
+                    <div class="progress-bar-graph">
+                        <div class="progress-bar-wrap">
+                            <div class="bar-wrap">
+                                <span style="width:50%">
+                                <strong><i>50</i>%</strong>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>  
+                <div class="clearfix"></div>
+              
+                <div class=" col-sm-5 margin-bottom-sm">
+                    <span class="progress-cat">Node Js</span>
+                    <div class="progress-bar-graph">
+                        <div class="progress-bar-wrap">
+                            <div class="bar-wrap">
+                                <span style="width:40%">
+                                <strong><i>40</i>%</strong>
                                 </span>
                             </div>
                         </div>
