--- a/index.html
+++ b/index.html
@@ -353,23 +353,27 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                         <span>Contate me</span>
                         <h5>Deixe me uma mensagem</h5>
                     </div>
+                    <a data-toggle="tooltip" data-placement="top" title="Contatar!" class="col-md-1 col-sm-1 col-xs-1 hidden-xs hidden-sm pull-right send-mail" href="mailto:gui.farias@outlook.com.br">
+                        <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                    </a>
+
+                    <!-- 
                     <form class="contact-form top_60" method="POST" action="mail.php">
                         <div class="row">
-                            <!--Name-->
+                           
                             <div class="col-md-6">
                                 <input id="con_name" name="con_name" class="form-inp requie" type="text" placeholder="Nome">
                             </div>
-                            <!--Email-->
                             <div class="col-md-6">
                                 <input id="con_email" name="con_email" class="form-inp requie" type="text" placeholder="Email">
                             </div>
                             <div class="col-md-12">
-                                <!--Message-->
                                 <textarea name="con_message" id="con_message" class="requie" placeholder="Deixar uma mensagem!" rows="8"></textarea>
-                                <button id="con_submit" class="sitebtn top_30" type="submit">Enviar</button>
+                                <button id="con_submit" class="sitebtn top_30" >Enviar</button>
                             </div>
                         </div>
                     </form>
+                    -->
                 </div>
             </div>
         </section>
