--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                     <p>Eu sou o Guilherme, formado em análise e desenvolvimento de sistemas pela faculdade Impacta, atualmente trabalhando de Freelancer com desenvolvimento WEB e mobile.
                     <br/><br/>
-Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou pessoal mesmo, frequento muitos meetups e hackathons em busca de colocar em pratica meus conhecimentos e adquirir novos conhecimentos e experiencia que agrega valor a mim.</p>
+Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou pessoal mesmo, frequento muitos meetups e hackathons em busca de colocar em pratica meus conhecimentos e adquirir novos conhecimentos e experiencia que agregam valor a mim.</p>
                 </div>
                 <!-- Working Areas Slider -->
                 <div class="owl-carousel work-areas top_90" data-pagination="false" data-items-desktop="3" data-items-desktop-small="3" data-items-tablet="2" data-items-tablet-small="1">
@@ -196,7 +196,32 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                         </div>
                     </div>
                 </div>
-                
+                <div class="clearfix"></div>
+                <div class="col-sm-5 margin-bottom-sm">
+                    <span class="progress-cat">SQL</span>
+                    <div class="progress-bar-graph">
+                        <div class="progress-bar-wrap">
+                            <div class="bar-wrap">
+                                <span style="width:70%">
+                                <strong><i>70</i>%</strong>
+                                </span>	
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+                <div class="col-sm-5 margin-bottom-sm">
+                    <span class="progress-cat">Python</span>
+                    <div class="progress-bar-graph">
+                        <div class="progress-bar-wrap">
+                            <div class="bar-wrap">
+                                <span style="width:70%">
+                                <strong><i>70</i>%</strong>
+                                </span>	
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class=" col-sm-5 margin-bottom-sm">
                     <span class="progress-cat">React</span>
                     <div class="progress-bar-graph">
@@ -216,26 +241,13 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                     <div class="progress-bar-graph">
                         <div class="progress-bar-wrap">
                             <div class="bar-wrap">
-                                <span style="width:60%">
-                                <strong><i>60</i>%</strong>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-                <div class="col-sm-5 margin-bottom-sm">
-                    <span class="progress-cat">Ui/Ux</span>
-                    <div class="progress-bar-graph">
-                        <div class="progress-bar-wrap">
-                            <div class="bar-wrap">
                                 <span style="width:50%">
                                 <strong><i>50</i>%</strong>
                                 </span>
                             </div>
                         </div>
                     </div>
-                </div> 
+                </div>
                 <div class="clearfix"></div>
                 <div class="col-sm-5 margin-bottom-sm">
                     <span class="progress-cat">Kotlin</span>
@@ -249,6 +261,19 @@ Gosto de estar sempre apredendo algo novo seja voltado para area profissional ou
                         </div>
                     </div>
                 </div>  
+                <div class="clearfix"></div>
+                <div class="col-sm-5 margin-bottom-sm">
+                    <span class="progress-cat">Ui/Ux</span>
+                    <div class="progress-bar-graph">
+                        <div class="progress-bar-wrap">
+                            <div class="bar-wrap">
+                                <span style="width:43%">
+                                <strong><i>43</i>%</strong>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
                 <div class="clearfix"></div>
               
                 <div class=" col-sm-5 margin-bottom-sm">
